--- a/apps/ledger-live-desktop/static/i18n/ru/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ru/app.json
@@ -32,7 +32,7 @@
       },
       "banner" : {
         "title" : "Исследуйте наш Каталог приложений",
-        "description" : "Мы делаем всё возможное, чтобы предоставить доступ к миру DeFi, NFT и другому. Вы сможете безопасно пользоваться ими прямо в Ledger Live!"
+        "description" : "Мы стараемся, чтобы у вас был безопасный доступ к миру DeFi, NFT и прочему. Вы можете пользоваться этим прямо в Ledger Live!"
       },
       "twitterBanner" : {
         "description" : "Воспользуйтесь хэштегом и расскажите нам, какие услуги вы бы хотели видеть в Ledger Live",
@@ -145,7 +145,7 @@
       "REVEAL" : "Показано",
       "DELEGATE" : "Делегировано",
       "REDELEGATE" : "Переделегировано",
-      "UNDELEGATE" : "Не делегировано",
+      "UNDELEGATE" : "Отозвано",
       "SUPPLY" : "Депонировано",
       "REDEEM" : "Выведено",
       "APPROVE" : "Подтверждено",
@@ -541,7 +541,7 @@
     },
     "resetThirdPartyDataModal" : {
       "title" : "Удалите данные посредников",
-      "subtitle" : "Удалите данные посредников. Чтобы получить доступ к услугам наших партнёров, вам может потребоваться заново пройти KYC и/или войти.",
+      "subtitle" : "Удалите данные посредников. Чтобы пользоваться услугами сторонних операторов, может потребоваться заново пройти KYC и/или авторизоваться.",
       "cta" : "Подтвердить"
     },
     "modal" : {
@@ -819,12 +819,37 @@
       "redelegation" : {
         "title" : "Если вы не знали...",
         "description" : "Комиссия за стейкинг у валидатора Ledger ниже, чем у используемого вами валидатора.",
-        "cta" : "Переделегируйте с Ledger"
+        "cta" : "Переделегируйте с Ledger",
+        "linkText" : "Что такое переделегирование и сколько на него уйдёт времени?",
+        "solana" : {
+          "title" : "Угадайте что?",
+          "description" : "У Ledger более низкие комиссии по сравнению с вашим валидатором. На этот процесс может уйти вплоть до 4 дней."
+        },
+        "near" : {
+          "title" : "Угадайте что?",
+          "description" : "Ledger offers a lower commission rate than your validator.This process can take up to 65 hours."
+        }
       },
       "delegation" : {
         "title" : "Если вы не знали...",
         "description" : "Валидатор Ledger может застейкать ваши {{asset}} с комиссией в {{commission}}%.",
-        "cta" : "Застейкать в Ledger"
+        "cta" : "Застейкать в Ledger",
+        "linkText" : "Подробнее",
+        "ethereum" : {
+          "lido" : {
+            "title" : "Если вы не знали...",
+            "description" : "Стейкайте ETH в Lido и получайте вознаграждения. Без блокировки и минимальной суммы.",
+            "cta" : "Стейкинг с Lido"
+          },
+          "kiln" : {
+            "title" : "Не ограничивайтесь ходлом. Приумножайте ETH",
+            "description" : "У вас больше 32 ETH? Тогда наслаждайтесь безопасным стейкингом эфиров в Kiln и получайте пассивный доход.",
+            "cta" : "Стейкинг с Kiln"
+          }
+        },
+        "near" : {
+          "description" : "Stake your NEAR with Ledger by Figment validator. Your coins stay yours, backed by Ledger’s uncompromising security."
+        }
       }
     }
   },
@@ -914,7 +939,7 @@
         "accounts" : "Счёт",
         "amountSupplied" : "Открытые займы",
         "amountSuppliedTooltip" : "Сумма, кредитованная в сеть",
-        "accruedInterests" : "Начисленные проценты",
+        "accruedInterests" : "Начислено",
         "accruedInterestsTooltip" : "Проценты с кредитования",
         "status" : "Состояние",
         "actions" : "Действия"
@@ -1300,7 +1325,7 @@
     },
     "buyCrypto" : {
       "title" : "Покупка криптовалюты",
-      "description" : "Покупайте криптовалюты через наших партнёров и получайте их прямо на счёт в Ledger",
+      "description" : "Покупайте криптовалюты через сторонних операторов и получайте их на счёт в Ledger",
       "cta" : "Купить"
     },
     "familyPack" : {
@@ -1314,7 +1339,7 @@
     },
     "sell" : {
       "title" : "Продажа криптовалюты",
-      "description" : "Продавайте биткойны через наших партнёров прямо в Ledger Live"
+      "description" : "Продавайте BTC через сторонних операторов прямо в Ledger Live"
     },
     "stakeAlgorand" : {
       "title" : "Стейкинг ALGORAND",
@@ -1322,7 +1347,7 @@
     },
     "swap" : {
       "title" : "Обмен криптовалют",
-      "description" : "Обменивайте одну криптовалюту на другую в Ledger Live посредством наших партнёров"
+      "description" : "Обменивайте криптовалюты между собой в Ledger Live через сторонних операторов"
     },
     "lending" : {
       "title" : "Кредиты в криптовалюте",
@@ -1399,7 +1424,7 @@
         "label" : "Популярно"
       },
       "earn" : {
-        "title" : "Приумножить",
+        "title" : "Стейкинг",
         "description" : "Приумножайте криптовалюты вместе с Ledger"
       }
     }
@@ -1461,7 +1486,7 @@
       "crypto" : "Криптовалюты",
       "price" : "Цена",
       "change" : "Изменение",
-      "marketCap" : "Рын. капитализация",
+      "marketCap" : "Капитализация",
       "last7d" : "За 7 дней"
     },
     "detailsPage" : {
@@ -1719,7 +1744,7 @@
       "redelegatedFrom" : "Повторно делегировано из",
       "redelegatedTo" : "Повторно делегировано",
       "redelegatedAmount" : "Переделегированная сумма",
-      "undelegated" : "Не делегировано",
+      "undelegated" : "Отозвано",
       "undelegatedFrom" : "Отозваны с",
       "undelegatedAmount" : "Отозванная сумма",
       "withdrawnFrom" : "Выведено из",
@@ -1834,7 +1859,7 @@
         "title" : "Сортировка",
         "name_asc" : "Название А-Я",
         "name_desc" : "Название Я-А",
-        "marketcap_desc" : "Рын. капитализация"
+        "marketcap_desc" : "Капитализация"
       },
       "installSuccess" : {
         "title" : "Приложение успешно установлено. Теперь можно создавать счета {{app}}",
@@ -2056,7 +2081,7 @@
       "castVotes" : {
         "max" : "МАКС.",
         "title" : "Голосовать",
-        "search" : "Поиск по имени или адресу...",
+        "search" : "Поиск по названию или адресу...",
         "totalVotes" : "Всего голосов: {{total}}",
         "selected" : "Выбрано: {{total}}",
         "maxSelected" : "Выбрано макс.: {{total}}",
@@ -2129,15 +2154,15 @@
           "description" : "Стейкайте ATOM с помощью надёжного валидатора Ledger. Монеты остаются вашими, а их безопасность обеспечивает Ledger."
         },
         "osmo" : {
-          "title" : "Приумножайте OSMO. Стейкайте с валидатором «Ledger by Figment».",
+          "title" : "Приумножайте OSMO. Стейкайте с валидатором «Ledger by Figment»",
           "description" : "Стейкайте OSMO через валидатора «Ledger by Figment». У него самые низкие комиссии и страховка от слэшинга!"
         },
         "solana" : {
-          "title" : "Приумножайте SOL. Стейкайте с помощью валидатора «Ledger by Figment».",
+          "title" : "Приумножайте SOL. Стейкайте с помощью валидатора «Ledger by Figment»",
           "description" : "Стейкайте SOL с помощью валидатора «Ledger by Figment» Монеты остаются вашими, а их безопасность обеспечивает Ledger."
         },
         "celo" : {
-          "title" : "Приумножайте CELO. Стейкайте с помощью валидатора «Ledger by Figment».",
+          "title" : "Приумножайте CELO. Стейкайте с помощью валидатора «Ledger by Figment»",
           "description" : "Стейкайте CELO с помощью валидатора «Ledger by Figment» Он обладает страховкой от слэшинга и бонусом в виде бескомпромиссной безопасности Ledger."
         }
       }
@@ -2154,7 +2179,7 @@
       },
       "amount" : {
         "title" : "Сумма",
-        "banner" : "Сколько можно отправить",
+        "banner" : "Вы можете отправить",
         "fees" : "Макс. ориентировочная комиссия",
         "standard" : "Обычная",
         "advanced" : "Дополнительно",
@@ -2238,7 +2263,7 @@
     "no" : "Мне не хочется"
   },
   "deviceLocalization" : {
-    "language" : "Язык интерфейса",
+    "language" : "Язык устройства",
     "deviceLanguage" : "Язык устройства",
     "changeLanguage" : "Поменять язык",
     "changeDeviceLanguage" : "Поменять язык устройства?",
@@ -3623,7 +3648,7 @@
     "durationDays" : "{{count}} дн.",
     "durationDays_plural" : "{{count}} дн.",
     "howItWorks" : "Как работает делегирование",
-    "delegationEarn" : "Теперь вы можете получать вознаграждение за стейкинг {{name}}, делегируя свои активы.",
+    "delegationEarn" : "Вы можете получать вознаграждение за стейкинг, если делегируете активы.",
     "earnRewards" : "Получить вознаграждения",
     "overdelegated" : "Превышен лимит делегирования",
     "status" : "Статус",
@@ -3776,7 +3801,9 @@
       "runLocalAppDeleteButton" : "Удалить",
       "runLocalAppOpenButton" : "Открыть",
       "enableLearnStagingUrl" : "Промежуточный URL страницы Образование",
-      "enableLearnStagingUrlDesc" : "Включить промежуточный URL-адрес для страницы Образование."
+      "enableLearnStagingUrlDesc" : "Включить промежуточный URL-адрес для страницы Образование.",
+      "openOnboardingAppInstallDebug" : "Запуск приложения настройки с экраном отладки",
+      "openOnboardingAppInstallDebugDesc" : "Открыть экран с компонентами из шага синхронизации приложения настройки."
     },
     "currencies" : {
       "selectPlaceholder" : "Выберите актив",
@@ -3913,7 +3940,7 @@
       "button" : "Исправить"
     },
     "exportLogs" : {
-      "title" : "Сохранение логов",
+      "title" : "Сохранить логи",
       "desc" : "Загрузка логов Ledger Live может помочь для устранения неполадок.",
       "btn" : "Сохранить"
     },
@@ -4175,7 +4202,7 @@
           },
           "3" : {
             "title" : "Ввести фразу восстановления на новом устройстве",
-            "description" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano!"
+            "description" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano."
           }
         }
       },
@@ -4423,7 +4450,7 @@
           "genuineCheck" : {
             "success" : {
               "title" : "Отлично!",
-              "desc" : "Подлинность вашего {{deviceName}} подтверждена. Теперь вы можете использовать его в Ledger Live."
+              "desc" : "Ваш кошелёк Ledger {{deviceName}} подлинный. Теперь его можно использовать в Ledger Live."
             },
             "buttons" : {
               "next" : "Продолжить",
@@ -5043,7 +5070,7 @@
       "install" : {
         "title" : "Прервать установку приложения?",
         "description" : "При выходе из вкладки «Мой Ledger» установка приложения прервётся. Дождитесь завершения, чтобы установить приложения из очереди.",
-        "stay" : "Подождать"
+        "stay" : "Дождаться"
       },
       "uninstall" : {
         "title" : "Прервать удаление приложения?",
@@ -5053,7 +5080,7 @@
       "update" : {
         "title" : "Прервать обновление приложения?",
         "description" : "При выходе из вкладки «Мой Ledger» обновление приложения прервётся.",
-        "stay" : "Завершить обновления"
+        "stay" : "Дождаться"
       },
       "quit" : "Закрыть «Мой Ledger»"
     },
@@ -5062,8 +5089,8 @@
       "description" : "Удаляйте приложения Bitcoin или Ethereum в последнюю очередь"
     },
     "NetworkDown" : {
-      "title" : "Похоже, не работает Интернет",
-      "description" : "Проверьте подключение к Интернету."
+      "title" : "Похоже, отсутствует подключение",
+      "description" : "Попробуйте проверить подключение к интернету."
     },
     "NoAddressesFound" : {
       "title" : "К сожалению, счета не найдены",
@@ -5356,7 +5383,7 @@
       "description" : "Транзакцию необходимо подписать в течение 30 секунд. Пожалуйста, попробуйте ещё раз."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "Не хватает баллов Энергии. Вы можете заплатить комиссию до 50 TRX."
+      "title" : "Не хватает баллов Энергии. Комиссия может достигать 50 TRX."
     },
     "PairingFailed" : {
       "title" : "Не удалось подключить устройство",
@@ -5521,6 +5548,10 @@
       "title" : "Не удалось загрузить изображение из файла",
       "description" : "Попробуйте другое изображение"
     },
+    "ImageLoadFromNftError" : {
+      "title" : "Не удалось загрузить изображение NFT",
+      "description" : "Попробуйте использовать другой NFT"
+    },
     "ImageDownloadError" : {
       "title" : "Не удалось загрузить изображение",
       "description" : "Попробуйте другое изображение"
@@ -5593,6 +5624,13 @@
       "descriptionWithProductName" : "Сначала {{ productName }} необходимо настроить.\nМы поможем вам с этим.",
       "goToOnboardingButton" : "Настроить устройство",
       "goToOnboardingButtonWithProductName" : "Настроить {{ productName }}"
+    },
+    "EtherscanAPIError" : {
+      "title" : "Сбой при загрузке транзакций",
+      "description" : "Произошла непредвиденная ошибка с обозревателями. Повторите попытку позже"
+    },
+    "GasEstimationError" : {
+      "title" : "Сбой расчёта стоимости Газа"
     }
   },
   "cryptoOrg" : {
@@ -5631,7 +5669,13 @@
         "stepLabel" : "Выбрать изображение",
         "description" : "Выберите изображение для использования в качестве (...)",
         "pickFromNftGallery" : "Выбрать из галереи NFT",
-        "upload" : "Загрузить с ПК"
+        "myNfts" : "Мои NFT",
+        "upload" : "Загрузить с ПК",
+        "chooseNft" : "Выбрать NFT",
+        "selectNft" : "Выбрать NFT",
+        "previousSelectNft" : "Назад",
+        "nftEmptyStateTitle" : "Пока тут ничего нет",
+        "nftEmptyStateDescription" : "Сначала добавьте NFT в кошелёк"
       },
       "adjust" : {
         "stepLabel" : "Изменить изображение",
@@ -5657,5 +5701,37 @@
     },
     "customImageSet" : "Изображение установлено",
     "finishCTA" : "Завершить"
+  },
+  "onboardingAppInstall" : {
+    "restore" : {
+      "title" : "Установить те же приложения, что и на {{deviceName}}?",
+      "titleNoDeviceName" : "Установить те же приложения, что и на предыдущем устройстве Ledger?",
+      "subtitle" : "Установить или удалить приложения можно в любое время.",
+      "installCTA" : "Восстановить приложения",
+      "skipCTA" : "Отложить"
+    },
+    "default" : {
+      "title" : "{{ productName }} использует приложения для безопасных блокчейн-транзакций",
+      "subtitle" : "Рекомендуем загрузить стандартный набор приложений. Позже можно будет установить больше приложений.",
+      "installCTA" : "Установить приложения",
+      "skipCTA" : "Отложить"
+    },
+    "progress" : {
+      "loading" : "Загружаем...",
+      "resolving" : "Устраняем зависимости приложения...",
+      "progress" : "Установка приложений: {{progress}}%",
+      "disclaimer" : "Добавляйте или удаляйте приложения в любое время с помощью Ledger Live."
+    },
+    "cancelled" : {
+      "title" : "Установка приложения на {{productName}} отменена",
+      "subtitle" : "{{productName}} нужны блокчейн-приложения для одобрения транзакций и операций с NFT.",
+      "installCTA" : "Установить",
+      "skipCTA" : "Отложить"
+    },
+    "locked" : {
+      "title" : "Устройство {{productName}} заблокировано",
+      "subtitle" : "Разблокируйте {{productName}} и повторите попытку установки.",
+      "installCTA" : "Повторить установку"
+    }
   }
 }
