File apps/ledger-live-mobile/src/locales/en/common.json was updated on ru-RU locale

--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -414,8 +414,8 @@
       "title" : "Указанная макс. комиссия слишком мала. Подписание операции может занять длительное время"
     },
     "NetworkDown" : {
-      "title" : "Похоже, не работает Интернет",
-      "description" : "Пожалуйста, проверьте подключение к Интернету."
+      "title" : "Похоже, отсутствует подключение",
+      "description" : "Попробуйте проверить подключение к интернету."
     },
     "NoAddressesFound" : {
       "title" : "К сожалению, счетов не обнаружено",
@@ -549,7 +549,7 @@
       "description" : "Транзакции необходимо подписать в течение 30 секунд. Пожалуйста, попробуйте ещё раз."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "Не хватает баллов Энергии. Вы можете заплатить комиссию до 50 TRX."
+      "title" : "Не хватает баллов Энергии. Комиссия может достигать 50 TRX."
     },
     "UpdateYourApp" : {
       "title" : "Необходимо обновить приложения",
@@ -811,6 +811,13 @@
       "title" : "Устройство заблокировано",
       "description" : "Разблокируйте устройство и повторите попытку.",
       "descriptionWithProductName" : "Разблокируйте {{ productName }} и повторите попытку."
+    },
+    "EtherscanAPIError" : {
+      "title" : "Сбой при загрузке транзакций",
+      "description" : "Произошла непредвиденная ошибка с обозревателями. Повторите попытку позже"
+    },
+    "GasEstimationError" : {
+      "title" : "Сбой расчёта стоимости Газа"
     }
   },
   "crash" : {
@@ -1263,7 +1270,7 @@
       "restoreDevice" : {
         "label" : "Восстановление устройства",
         "subTitle" : "Ввести фразу восстановления на новом устройстве",
-        "desc" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano!"
+        "desc" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano."
       },
       "recovery" : "Есть фраза восстановления?",
       "protect" : {
@@ -1653,6 +1660,10 @@
             "label" : "Проверьте, обнаружено ли устройство Nano X."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "Почему не подключается устройство Ledger?",
+        "description" : "После активации Bluetooth на устройстве Ledger иногда могут возникать проблемы подключения к мобильному приложению Ledger Live. Чтобы исправить это, воспользуйтесь кнопкой «Как это исправить?»."
       }
     },
     "stepImportAccounts" : {
@@ -1995,7 +2006,7 @@
       "desc" : "Просто отправьте криптоактивы получателю и дождитесь синхронизации приложения."
     },
     "carousel" : {
-      "title" : "То, что нужно"
+      "title" : "Специально для вас"
     },
     "recommended" : {
       "title" : "Рекомендуем"
@@ -2070,7 +2081,7 @@
       "CREATE" : "Создано",
       "REVEAL" : "Раскрытие",
       "DELEGATE" : "Делегирование",
-      "UNDELEGATE" : "Отзыв",
+      "UNDELEGATE" : "Отозвано",
       "REDELEGATE" : "Переделегирование",
       "VOTE" : "Голосование",
       "FREEZE" : "Заморозка",
@@ -2250,11 +2261,11 @@
       "advancedLogs" : "Расширенные логи",
       "accountName" : {
         "title" : "Название счёта",
-        "desc" : "Опишите счёт",
+        "desc" : "Введите описание для счёта.",
         "placeholder" : "Введите название"
       },
       "accountUnits" : {
-        "title" : "Ред. единицы учёта"
+        "title" : "Выбор единицы учёта"
       },
       "unit" : {
         "title" : "Единица учёта",
@@ -2345,7 +2356,7 @@
         "description" : "Вам нужно немного {{currencyTicker}}, чтобы {{actionName}} с помощью этого счёта."
       }
     },
-    "earn" : "Растите",
+    "earn" : "Приумножение",
     "quickActions" : "Быстрые действия",
     "banner" : {
       "redelegation" : {
@@ -2558,7 +2569,7 @@
         "goToSettings" : "Перейдите в настройки системы"
       },
       "allowed" : {
-        "title" : "Допуск уведомлений",
+        "title" : "Уведомления",
         "desc" : "Получайте уведомления о криптоактивах, ситуации на рынке и не только"
       },
       "transactions" : {
@@ -2585,7 +2596,7 @@
         "title" : "Уведомления о курсах",
         "desc" : "Настраивайте оповещения о курсах любимых криптовалют, чтобы не пропустить движения рынка"
       },
-      "disclaimer" : "Конфиденциальность данных — главный приоритет для Ledger. Поэтому собранная информация никогда не передаётся нашим партнёрам."
+      "disclaimer" : "Конфиденциальность данных — главный приоритет для Ledger. Поэтому собранная информация никогда не передаётся сторонним операторам услуг."
     },
     "help" : {
       "title" : "Помощь",
@@ -2600,12 +2611,12 @@
       "clearCacheModal" : "Вы уверены?",
       "clearCacheModalDesc" : "Мы проведём полное сканирование транзакций в сети. История счетов будет восстановлена, а средства на балансе будут пересчитаны.",
       "clearCacheButton" : "Очистить",
-      "exportLogs" : "Сохранение логов",
+      "exportLogs" : "Сохранить логи",
       "exportLogsDesc" : "Сохранённые логи Ledger Live могут потребоваться для устранения неполадок.",
       "resetThirdPartyData" : "Сброс данных посредников",
       "resetThirdPartyDataDesc" : "Удалите все данные посредников, использованные для доступа к сторонним поставщикам услуг.",
       "resetThirdPartyDataModal" : "Удаление данных посредников",
-      "resetThirdPartyDataModalDesc" : "Удалите данные посредников. Чтобы получить доступ к услугам наших партнёров, вам может потребоваться заново пройти KYC и/или авторизоваться.",
+      "resetThirdPartyDataModalDesc" : "Удалите данные посредников. Чтобы получить доступ к услугам сторонних операторов, может потребоваться заново пройти KYC и/или авторизоваться.",
       "hardReset" : "Сброс Ledger Live",
       "hardResetDesc" : "Это действие не затрагивает активы и позволяет удалить все данные в Ledger Live, включая данные счетов, историю транзакций и настройки. Используйте устройство Ledger для перезагрузки криптоактивов и управления ими в Ledger Live с исходными настройками.",
       "repairDevice" : "Ремонт устройства Ledger",
@@ -2736,7 +2747,7 @@
     },
     "receive" : {
       "title" : "Получить",
-      "description" : "Получайте криптовалюту из других кошельков.",
+      "description" : "Получайте криптовалюту с других кошельков.",
       "titleReadOnly" : "Не утверждённый адрес",
       "headerTitle" : "Криптоактив",
       "titleDevice" : "Добавление устройства",
@@ -2779,12 +2790,12 @@
       "receiveConfirmation" : {
         "title" : "Получить {{currencyTicker}}",
         "addressVerified" : "Адрес подтверждён",
-        "verifyAddress" : "Нажмите здесь для подтверждения адреса",
-        "adviceVerify" : "Мы рекомендуем подтверждать адрес с помощью устройства Ledger",
+        "verifyAddress" : "Нажмите сюда для подтверждения адреса",
+        "adviceVerify" : "Мы рекомендуем подтверждать адрес на устройстве Ledger",
         "sendWarning" : "Отправляйте на этот адрес исключительно {{currencyName}} ({{currencyTicker}}). Любые другие криптоактивы могут быть потеряны навсегда."
       },
       "securityVerify" : {
-        "title" : "Из соображений безопасности мы рекомендуем подтвердить этот адрес с помощью устройства Ledger.",
+        "title" : "Для безопасности мы рекомендуем подтвердить этот адрес на устройстве Ledger.",
         "subtitle1" : "Подтверждение адреса необходимо для безопасности криптоактивов. Помните, что адрес на экране устройства Ledger подделать невозможно.",
         "subtitle2" : "Подтверждение адреса позволяет убедиться, что адрес на экране вашего устройства Ledger совпадает с адресом, который отображается в Ledger Live.",
         "verifyCta" : "Подтвердить адрес",
@@ -2822,18 +2833,18 @@
     },
     "buy" : {
       "title" : "Покупка",
-      "description" : "Покупайте криптовалюту за наличные безопасно."
+      "description" : "Безопасно покупайте криптовалюту за фиат."
     },
     "sell" : {
       "title" : "Продажа",
-      "description" : "Продавайте криптовалюту за наличные безопасно."
+      "description" : "Безопасно продавайте криптовалюту за фиат."
     },
     "exchange" : {
       "title" : "Покупка/Продажа"
     },
     "swap" : {
       "title" : "Обмен",
-      "description" : "Обменивайте криптовалюты.",
+      "description" : "Обменивайте один криптоактив на другой.",
       "selectDevice" : "Выберите устройство",
       "broadcasting" : "Транслируем обменную операцию",
       "loadingFees" : "Загружаем комиссию сети...",
@@ -2849,7 +2860,7 @@
         "bannerCTA" : "Сбросить KYC"
       },
       "main" : {
-        "header" : "Обмен криптоактивов"
+        "header" : "Обмен"
       },
       "kyc" : {
         "disclaimer" : "Я даю согласие на передачу данных о моём местоположении третьим лицам в целях соблюдения комплаенса.",
@@ -3298,6 +3309,10 @@
           }
         }
       }
+    },
+    "walletConnect" : {
+      "title" : "WalletConnect",
+      "description" : "Подключить кошелёк к децентрализованным приложениям"
     }
   },
   "signMessage" : {
@@ -3415,7 +3430,7 @@
     },
     "info" : {
       "maxSpendable" : {
-        "title" : "Сколько можно отправить",
+        "title" : "Вы можете отправить",
         "description" : "Максимальная расходуемая сумма — это баланс средств на счету, которые можно отправить."
       }
     }
@@ -3954,8 +3969,8 @@
       "default" : "По умолчанию",
       "name_asc" : "Название А-Я",
       "name_desc" : "Название Я-А",
-      "marketcap_desc" : "Рын. капитализация",
-      "marketcap" : "Рын. капитализация",
+      "marketcap_desc" : "Капитализация",
+      "marketcap" : "Капитализация",
       "name" : "Название"
     }
   },
@@ -4059,7 +4074,7 @@
     }
   },
   "deviceLocalization" : {
-    "language" : "Язык интерфейса",
+    "language" : "Язык устройства",
     "deviceLanguage" : "Язык устройства",
     "chooseLanguage" : "Выберите язык для {{deviceName}}.",
     "changeLanguage" : "Поменять язык",
@@ -5558,8 +5573,8 @@
       "selectAccount" : "Выберите счёт",
       "wantToBuy" : "Я покупаю",
       "connectDevice" : "Подключите устройство",
-      "title" : "Покупайте криптовалюту через партнёра",
-      "coinifyTitle" : "Покупайте криптовалюту через партнёра",
+      "title" : "Покупка криптовалюты через сторонних операторов",
+      "coinifyTitle" : "Покупка криптовалюты через сторонних операторов",
       "description" : "Приобретайте криптовалюты через Coinify и получайте их прямо на счёт в Ledger.",
       "CTAButton" : "Купить",
       "emptyState" : {
@@ -5586,7 +5601,7 @@
       "selectAccount" : "Выберите счёт",
       "wantToSell" : "Я продаю",
       "connectDevice" : "Подключите устройство",
-      "title" : "Продавайте криптовалюту через партнёра",
+      "title" : "Продажа криптовалюты через сторонних операторов",
       "description" : "Продавайте криптовалюту прямо со счёта в Ledger посредством Coinify и получайте фиатные деньги на банковский счёт.",
       "CTAButton" : "Продать",
       "emptyState" : {
@@ -5609,7 +5624,7 @@
     },
     "swap" : {
       "title" : "ОБМЕН КРИПТОВАЛЮТ",
-      "description" : "Обменивайте криптоактивы непосредственно на счетах в Ledger благодаря нашему партнёру."
+      "description" : "Обменивать криптоактивы можно непосредственно на счетах Ledger через сторонних операторов."
     }
   },
   "walletconnect" : {
@@ -5678,11 +5693,11 @@
       }
     },
     "status" : {
-      "title" : "Некоторые неполадки требуют вашего внимания",
-      "title_plural" : "Некоторые неполадки требуют вашего внимания",
+      "title" : "Обратите внимание",
+      "title_plural" : "Обратите внимание",
       "desc" : {
         "0" : "Они изучаются и скоро будут исправлены.",
-        "1" : "Если вы столкнулись с какой-либо неполадкой из указанных, свяжитесь с <0>Поддержкой Ledger</0>"
+        "1" : "Если вы столкнулись с чем-то из этого, свяжитесь с <0>Поддержкой Ledger</0>"
       },
       "cta" : {
         "ok" : "Понятно"
